kubernetes/vault/vault-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    name: vault
    istio-injection: enabled
